# chainiterator

./: .travis.yml  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: ChainIterator.h  multikeymap.hpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  ChainIteratorTests.cpp  main.cpp
